--- a/cass1.css
+++ b/cass1.css
@@ -1,88 +1,42 @@
 body {
-    background-color: #e6f0f5;
     margin: 0;
-    font-family: Verdana, Arial, sans-serif;
+    font-family: Verdana;
+    background-color: #e4e4e4;
+    color: #333;
 }
-
-
-nav {
-    background-color: #00334d;
-    padding: 15px;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    margin-right: 20px;
-    font-size: 16px;
-}
-
-nav a:hover {
-    color: yellow;
-}
-
-
-header {
-    background-color: #005580;
-    color: white;
-    text-align: center;
-    padding: 50px;
-}
-
 
 .container {
-    padding: 30px;
-}
-
-
-.box {
-    background-color: white;
-    padding: 25px;
-    margin-bottom: 30px;
-    border-radius: 12px;
-    box-shadow: 0px 4px 8px #999;
-}
-
-
-.image-box {
-    margin-top: 20px;
-    text-align: center;
-}
-
-.image-box img {
-    width: 80%;
-    border-radius: 12px;
-    margin-top: 10px;
-}
-
-.image-box img:hover {
-    opacity: 0.9;
-}
-
-/* TEXT */
-h1 {
-    margin: 0;
+    padding: 60px;
 }
 
 h2 {
-    color: #00334d;
+    color: #7b1e1e;
+    letter-spacing: 4px;
+    text-shadow: 1px 1px 5px #aaa;
 }
 
 p {
     font-size: 18px;
-    line-height: 1.6;
+    line-height: 1.9;
+    margin-bottom: 18px;
 }
 
-
-button {
-    padding: 10px 15px;
-    background-color: #005580;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    margin: 5px;
+.box {
+    background-color: #f2f2f2;
+    padding: 40px;
+    border-radius: 18px;
+    box-shadow: 0 0 20px #b5b5b5;
+    margin-top: 30px;
 }
 
-button:hover {
-    background-color: #00334d;
+img {
+    width: 70%;
+    margin-top: 35px;
+    border-radius: 15px;
+    box-shadow: 0 0 20px #999;
 }
+
+img:hover {
+    transform: scale(1.03);
+}
+
