--- a/cass1.css
+++ b/cass1.css
@@ -1,51 +1,34 @@
 body {
     margin: 0;
     font-family: Verdana;
-    background-color: #2f2f2f;
-    color: #e0e0e0;
+    background-color: #242b28;
+    color: #e6e6e6;
 }
 
 .container {
-    padding: 60px;
+    padding: 45px;
 }
 
-h2 {
-    color: #8b1a1a;
-    letter-spacing: 5px;
-    font-size: 36px;
-    text-shadow: 2px 2px 8px #000;
-}
-
-p {
-    font-size: 18px;
-    line-height: 1.9;
+h1, h2 {
+    letter-spacing: 4px;
+    color: #b7d2c3;
+    text-shadow: 0 0 8px black;
 }
 
 .box {
-    background-color: #3b3b3b;
-    padding: 40px;
-    border-radius: 22px;
-    box-shadow: 0 0 25px #000;
-    margin-top: 35px;
-    border: 1px solid #555;
-}
-
-.warning {
+    background-color: #1f2623;
+    padding: 35px;
+    border-radius: 18px;
+    box-shadow: 0 0 18px black;
     margin-top: 30px;
-    padding: 18px 22px;
-    background-color: #444444;
-    border-left: 6px solid #8b1a1a;
-    color: #cccccc;
-    font-style: italic;
-    border-radius: 10px;
-    box-shadow: 0 0 12px #000;
 }
 
 img {
-    width: 75%;
-    margin-top: 40px;
-    border-radius: 18px;
-    box-shadow: 0 0 25px #000;
+    width: 80%;
+    display: block;
+    margin: 25px auto;
+    border-radius: 15px;
+    box-shadow: 0 0 15px black;
 }
 
 img:hover {
