Refactor CSS for improved organization and readability

--- a/blog css.css
+++ b/blog css.css
@@ -1,4 +1,4 @@
-*{
+{
     margin:0;
     padding:0;
     box-sizing:border-box;
@@ -170,5 +170,6 @@ footer{
     padding:18px;
     font-size:14px;
 }
+
 
 
