--- a/blog css.css
+++ b/blog css.css
@@ -115,6 +115,12 @@ p{
   width:100%;
   height:100%;
 }
+.post{
+  background:rgba(0,0,0,.45);
+  padding:30px;
+  border-radius:20px;
+  margin-bottom:35px;
+}
 .post h2{
   color:#a9c9ff;
   margin-bottom:8px;
@@ -197,6 +203,7 @@ footer{
   border-radius:30px;
   font-size:.95rem;
 }
+
 
 
 
